feat: add endpoint to create user
