# app/docs/swagger.yaml
@@ -5,6 +5,8 @@ definitions:
         type: string
       created:
         type: string
+      id:
+        type: integer
       ip:
         type: string
       login:
@@ -137,6 +139,19 @@ definitions:
       name:
         type: string
     type: object
+  requestData.CreateUser:
+    properties:
+      email:
+        type: string
+      login:
+        type: string
+      name:
+        type: string
+      send_mail:
+        type: boolean
+      surname:
+        type: string
+    type: object
   requestData.Login:
     properties:
       login:
@@ -249,6 +264,15 @@ definitions:
         type: string
       surname:
         type: string
+    type: object
+  responses.CreateUserAdmin:
+    properties:
+      message:
+        type: string
+      success:
+        type: boolean
+      user:
+        $ref: '#/definitions/responses.UserInfo'
     type: object
   responses.Refresh:
     properties:
@@ -513,6 +537,40 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Change user data
+      tags:
+      - Admin
+  /admin/users/create:
+    post:
+      consumes:
+      - application/json
+      description: Endpoint to create user account
+      parameters:
+      - description: request requestData
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/requestData.CreateUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.CreateUserAdmin'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Create user account
       tags:
       - Admin
   /admin/users/delete:
